2010-10-01  John W. Eaton  <jwe@octave.org>

	* graphics.h.in (class caseless_str): Move to
	liboctave/caseless-string.h.

2010-10-01  John W. Eaton  <jwe@octave.org>

	* graphics.cc (base_properties::get_dynamic): Create and return
	octave_scalar_map object instead of Octave_map.
	(base_graphics_object::remove_all_listeners): Use octave_map
	instead of Octave_map.
	(base_graphics_object::values_as_string): Likewise.

	* graphics.h.in, graphics.cc (property_list::as_struct):
	Return octave_scalar_map instead of Octave_map.
	(base_graphics_object::values_as_struct): Likewise.
	(graphics_object:values_as_struct): Likewise.
	(graphics_object::set): Accept octave_map instead of Octave_map.

	* genprops.awk: Use octave_map instead of Octave_map in
	generated code.  Convert second arg to octave_value in call to
	octave_map::assign.

2010-10-01  John W. Eaton  <jwe@octave.org>

	* mex.cc (mxArray_struct::as_octave_value): Use octave_map
	instead of Octave_map.

2010-10-01  John W. Eaton  <jwe@octave.org>

	* ov-base.h: Delete forward decl for Octave_map class.

2010-10-01  John W. Eaton  <jwe@octave.org>

	* ov-struct.h (octave_struct (const Octave_map&)): Delete constructor.

2010-10-01  John W. Eaton  <jwe@octave.org>

	* ov-fcn-inline.cc (octave_fcn_inline::map_value):  Use
	octave_scalar_map and octave_map instead of Octave_map.

2010-10-01  John W. Eaton  <jwe@octave.org>

	* variables.cc (symbol_info_list::map_value): Use
	octave_scalar_map and octave_map instead of Octave_map.

2010-09-30  Jaroslav Hajek  <highegg@gmail.com>

	* oct-map.h (octave_fields::nil_rep): Make a static function.
	(octave_fields::octave_fields (void)): Use it here.

2010-09-30  John W. Eaton  <jwe@octave.org>

	* toplev.cc (octave_config_info): Use Octave_scalar_map instead
	of Octave_map.
	* sighandlers.cc (make_sig_struct, FSIG): Likewise.

	* utils.cc (decode_subscripts): Use octave_map instead of Octave_map.
	* octave.cc (F__version_info__): Likewise.